ige-omega/deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: isabella-ige-omega
  labels: {app.kubernetes.io/part-of: isabella-genesis}
